# workhub

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  index.html  overlay.html  package-lock.json  package.json  quick-capture.html  vite.config.ts  voice-indicator.html
.claude-plugin/: marketplace.json
.claude/rules/: file-naming.md  global-keyboard-input.md  help-screen.md  herdr-integration.md  music-player.md  opencode-runtime.md  plugin-authoring.md  release-process.md  tauri-webview-gotchas.md  team-ops-design-doc.md  ui-conventions.md  voice-input-build.md
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
docs/: plugins.md
docs/images/: README.md
plugins/engineering/: .mcp.json  README.md
plugins/engineering/.claude-plugin/: plugin.json
plugins/engineering/agents/: code-explore.md  heavy-implementer.md  implementer.md  test-runner.md
plugins/engineering/hooks/: extended-rules.example.md  hooks.json  project-context.example.json  role-based-model-selection.md
plugins/engineering/mcp/: serena-mcp-launcher.mjs
plugins/obsidian/: README.md
plugins/obsidian/.claude-plugin/: plugin.json
plugins/openspec/.claude-plugin/: plugin.json
plugins/productivity/: README.md
plugins/productivity/.claude-plugin/: plugin.json
plugins/productivity/hooks/: hooks.json
plugins/scrum/: .mcp.json  README.md
plugins/scrum/.claude-plugin/: plugin.json
plugins/scrum/hooks/: hooks.json  scrum-context.example.json
plugins/scrum/mcp/: monday-api-mcp-launcher.mjs
plugins/stack-cloudflare/.claude-plugin/: plugin.json
plugins/stack-dnd-kit/.claude-plugin/: plugin.json
plugins/stack-opencode/.claude-plugin/: plugin.json
plugins/stack-react-router/.claude-plugin/: plugin.json
plugins/team-ops/: README.md
plugins/team-ops/.claude-plugin/: plugin.json
plugins/team-ops/docs/: design.html
plugins/team-ops/hooks/: hooks.json  team-context.example.json
plugins/workhub/: README.md
plugins/workhub/.claude-plugin/: plugin.json
plugins/workhub/hooks/: hooks.json  lib.mjs  memory-capture.mjs  memory-inject.mjs  task-sync-reminder.mjs  vault-write-guard.mjs
plugins/workhub/memory-engine/: README.md  cli.mjs
plugins/workhub/scripts/: task-cli.mjs
src/: App.tsx  app.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: actions.rs  commands.rs  git.rs  harness.rs  herdr.rs  lib.rs  main.rs  models.rs  music.rs  quick_capture.rs  schedule.rs  schedule_edit.rs  storage.rs  stt.rs  tasks.rs  terminal.rs  tidy.rs  update.rs  voice.rs  voice_chunk.rs  voice_history.rs  wsl.rs
src-tauri/src/ink/: hook.rs  mod.rs  overlay.rs  state.rs
src/components/: NotesDialog.tsx  ProjectRow.tsx  ReposView.tsx  SettingsDialog.tsx  TaskDialog.tsx  TaskKanban.tsx  TaskList.tsx  TasksView.tsx  change-file-list.tsx  copy-prompt-button.tsx  help-view.tsx  launch-agent-button.tsx  memory-setup-banner.tsx  model-combobox.tsx  open-in-obsidian-button.tsx  priority-badge.tsx  project-row.tsx  repos-view.tsx  settings-dialog.tsx  task-dialog.tsx  task-kanban.tsx  task-list.tsx  tasks-view.tsx  template-update-banner.tsx  terminal-panel.tsx  update-banner.tsx  voice-view.tsx  worktrees-panel.tsx
src/components/graph/: CommitRow.tsx  ConfirmDialog.tsx  GitGraphView.tsx  NameDialog.tsx  commit-diff-panel.tsx  commit-row.tsx  git-graph-view.tsx
src/components/music/: MusicView.tsx  PlayerPane.tsx  PlaylistTabs.tsx  add-url-form.tsx  music-view.tsx  player-pane.tsx  playlist-items.tsx  playlist-tabs.tsx  playlist-transfer-menu.tsx  use-youtube-player.ts  useYouTubePlayer.ts
src/components/repos/: changes-panel.tsx
src/components/schedule/: item-editor.tsx  schedule-ai-panel.tsx  schedule-grid.tsx  schedule-view.tsx
src/components/timer/: timer-view.tsx  use-alarm-sound.ts  use-countdown.ts
src/components/ui/: branch-combobox.tsx  combobox.tsx  context-menu.tsx  date-picker.tsx  date-time-picker.tsx  dialog.tsx  markdown.tsx  sheet.tsx  tabs.tsx
src/lib/: agent-models.ts  api.ts  capture-patterns.test.ts  capture-patterns.ts  clipboard-paste.test.ts  clipboard-paste.ts  date-time.test.ts  date-time.ts  diff-format.ts  file-tree.test.ts  file-tree.ts  git-graph.test.ts  gitGraph.test.ts  gitGraph.ts  slack-url.test.ts  slack-url.ts  task-body.test.ts  task-body.ts  taskBody.ts  taskDue.ts  use-tidy-notifications.ts
src/lib/music/: playlist-helpers.ts  playlist-transfer.test.ts  playlist-transfer.ts  shuffle-queue.ts  types.ts
src/lib/schedule/: export.ts  i18n.ts  layout.test.ts  layout.ts  parse.ts
src/lib/timer/: format.test.ts  format.ts  settings.test.ts  settings.ts
src/overlay/: main.ts
src/quick-capture/: capture-app.tsx  main.tsx
src/stores/music/: index.ts  playback-slice.ts  playlist-slice.test.ts  playlist-slice.ts  types.ts
src/voice-indicator/: main.tsx  voice-indicator-app.tsx
vault-template/: .gitignore  .template-policy.json  AGENTS.md  CLAUDE.md  home.md  opencode.json
vault-template/.claude/: project-context.json  settings.json
vault-template/.claude/rules/: inbox.md  notes.md  projects.md  rules-ex-authoring.md  vault-harness.md
vault-template/.claude/rules-ex/: README.md
vault-template/.opencode/commands/: check-claude-plugin-sync.md  install-recommended-skills-globally.md  sync-claude-skills.md  sync-claude-user-plugins.md
vault-template/.opencode/mcp/: context7-mcp-launcher.mjs
vault-template/.opencode/plugins/: inject-claude-plugin-sync-reminder-plugin.ts  inject-extended-rules-plugin.ts  inject-project-context-plugin.ts  inject-response-language-plugin.ts  inject-target-rules-plugin.ts  memory-plugin.ts  post-format-project-plugin.ts  response-language.json
vault-template/archive/: _index.md
vault-template/inbox/: README.md
vault-template/journal/: README.md
vault-template/knowledge/: _index.md
vault-template/projects/: _index.md
vault-template/tasks/: _index.md
vault-template/templates/: _index.md.template  task.md
vault-template/templates/project/: README.md  prd.md  (+2 more)
(+173 files in other folders)
