[package]
name = "workhub"
version = "0.32.0"
edition = "2021"
description = "Developer Workspace Manager — a fast hub for AI-driven, multi-repo development"
license = "MIT"
repository = "https://github.com/atman-33/workhub"

# Desktop-only: keep the default rlib. Adding cdylib (only needed for mobile
# targets) makes the debug DLL exceed the PE export-ordinal limit on
# windows-gnu ("export ordinal too large").
[lib]
name = "workhub_lib"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
# rustls-based (no schannel): avoids OS revocation-check failures seen on this network
ureq = { version = "2", features = ["json"] }
# vault task-file watching (debounced manually in tasks.rs; kept to the plain
# channel API — no extra debouncer crate needed).
notify = "6"
# task deletion goes to the OS recycle bin (restorable), never a hard delete
trash = "5"
tauri-plugin-notification = "2.3.3"
portable-pty = "0.9"

# ink overlay: Raw Input keyboard listener for the double-Alt temporary draw mode
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
] }

[profile.release]
opt-level = 2
lto = "thin"
strip = true
