[package]
name = "workhub"
version = "0.53.1"
edition = "2021"
description = "Developer Workspace Manager — a fast hub for AI-driven, multi-repo development"
license = "MIT"
repository = "https://github.com/atman-33/workhub"

# Desktop-only: keep the default rlib. Adding cdylib (only needed for mobile
# targets) makes the debug DLL exceed the PE export-ordinal limit on
# windows-gnu ("export ordinal too large").
[lib]
name = "workhub_lib"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
# rustls-based (no schannel): avoids OS revocation-check failures seen on this network
ureq = { version = "2", features = ["json"] }
# vault task-file watching (debounced manually in tasks.rs; kept to the plain
# channel API — no extra debouncer crate needed).
notify = "6"
# task deletion goes to the OS recycle bin (restorable), never a hard delete
trash = "5"
tauri-plugin-notification = "2.3.3"
# quick capture: global hotkey (RegisterHotKey-based; distinct from the ink
# Raw Input listener, which observes key state rather than registering keys)
tauri-plugin-global-shortcut = "2"
# single-instance guard: a second launch focuses the existing main window and
# exits instead of accumulating windowless/zombie processes (see lib.rs)
tauri-plugin-single-instance = "2"
# percent-encoding for obsidian:// open URIs (task file jump-to-Obsidian)
percent-encoding = "2"
portable-pty = "0.9"
# voice input: local speech-to-text via whisper.cpp (no LLM, no cloud).
# The vulkan feature builds ggml's Vulkan backend for GPU-accelerated
# decoding (whisper.cpp falls back to CPU at runtime when no usable Vulkan
# device exists). Building requires the Vulkan SDK (VULKAN_SDK env var) —
# see .claude/rules/voice-input-build.md.
whisper-rs = { version = "0.14", features = ["vulkan"] }
# voice input: native microphone capture (focus-independent, no webview mic)
cpal = "0.15"
# voice input: verifies downloaded ggml model checksums. Upstream whisper.cpp
# publishes SHA-1 checksums for its ggml models (40 hex chars), not SHA-256 —
# this crate matches that, see src-tauri/src/stt.rs.
sha1 = "0.10"
# vault template sync: hashes embedded template files vs. vault copies to
# detect drift (see src-tauri/src/tasks.rs, "template manifest" section).
sha2 = "0.10"
# embeds vault-template/ into the binary so a packaged build has no dev-machine
# path dependency for the template source (see src-tauri/src/tasks.rs).
include_dir = "0.7"

# ink overlay: Raw Input keyboard listener for the double-Alt temporary draw mode
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    # voice input: clipboard save/restore around the paste-injection (the
    # focused app, not workhub, owns the clipboard target — Win32 clipboard
    # APIs work regardless of which window has focus).
    "Win32_System_DataExchange",
    "Win32_System_Ole",
    "Win32_System_Memory",
] }

# whisper-rs-sys 0.13.1 passes the MSVC-only /utf-8 flag to g++ on every
# Windows target, which breaks the windows-gnu build. Vendored copy carries a
# one-line fix gating the flag on *-msvc (see vendor/whisper-rs-sys/build.rs).
[patch.crates-io]
whisper-rs-sys = { path = "vendor/whisper-rs-sys" }

[profile.release]
opt-level = 2
lto = "thin"
strip = true
